--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,3 +1,8 @@
+<head>
+
+</head>
+
+
 <form method="post" action="/game">
   <label for="player1">Player 1:</label>
   <input name="player1" type="text" placeholder="Player 1 initials">
