working OO javascript refactor, still missing 'player' model

--- a/app/views/game.erb
+++ b/app/views/game.erb
@@ -15,6 +15,7 @@
 
 <a href="/"><button id="reset">Reset</button></a>
 
-<!-- <script src="/js/game.js"></script> -->
-<script src="http://coffeescript.org/extras/coffee-script.js"></script>
-<script type="text/coffeescript" src="/js/play.coffee"></script>
+<script src="/js/game.js"></script>
+<script src="/js/application.js"></script>
+<!-- <script src="http://coffeescript.org/extras/coffee-script.js"></script>
+<script type="text/coffeescript" src="/js/play.coffee"></script> -->
