--- a/app/views/winner.erb
+++ b/app/views/winner.erb
@@ -2,6 +2,6 @@
 <br>
 <h2>Finished in <%= @winner_time.to_f/1000 %> Seconds</h2>
 
-<button class="btn"><a href="/">Home</a></button>
+<a href="/"><button class="btn">Home</button></a>
 <% @player = Player.find_by_name(@winner.name) %>
 <%= erb :"player_stats", :layout=>false %>
