--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,12 +1,11 @@
-<head>
 
-</head>
-
-
+<div class="row-responsive span3 offset1 hero-unit">
 <form method="post" action="/game">
-  <label for="player1">Player 1:</label>
-  <input name="player1" type="text" placeholder="Player 1 initials">
-  <label for="player2">Player 2:</label>
-  <input name="player2" type="text" placeholder="Player 2 initials">
-  <input type="submit" value="Play!">
+    <label for="player1">Player 1:</label>
+    <input name="player1" type="text" placeholder="Player 1 initials">
+    <label for="player2">Player 2:</label>
+    <input name="player2" type="text" placeholder="Player 2 initials"><br>
+
+  <input type="submit" class="btn-success" value="Play!">
 </form>
+</div>
